# IDS706_Final_Project_klap

./: Dockerbuild  Dockerfile  EDA.ipynb  Makefile  README.md  Requirements.txt  buildspec.yml  fast_api.py  hf_dataset_query.py  main.py  merge_datasets.py  new.py  pull_data.py  r.txt  review.txt  s3_save.py  sample.txt  t.txt  test.py  upload.py
.github/workflows/: main.yml
data/: app.py  data_generator.py  merge_datasets.py  save_datasets.py
hlib/: loader.py
reviews_generator/: LICENSE  README.md  pyproject.toml
reviews_generator/src/movie_reviews/: generate.py
