[build-system]
requires = ["setuptools>=61.0", "pandas>=1.4.4"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewers"
version = "0.0.1"
authors = [
  { name="Lorna Aine,", email="lorna.aine@duke.edu" },
]
description = "Generate sample movie reviews data for data science projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"

]
[project.urls]
"Homepage" = "https://github.com/nogibjj/IDS706_Final_Project_klap"